--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -268,10 +268,10 @@
         <p>ต้องการลบหรือไม่?</p>
     </div>
     <div class="actions">
-        <div class="ui negative button">
+        <div class="ui mini negative button">
             ยกเลิก
         </div>
-        <div class="ui positive right labeled icon button">
+        <div class="ui mini positive right labeled icon button">
             ยืนยัน
             <i class="checkmark icon"></i>
         </div>
