--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
@@ -72,6 +72,10 @@
                         <i class="search icon"></i>
                         ค้นหา
                     </button>
+                    <button class="ui mini button" type="reset" (click)="reset()">
+                        <i class="refresh icon"></i>
+                        ล้างข้อมูล
+                    </button>
                 </div>
             </form>
         </div>
