--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-3/int01-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-3/int01-1-3.component.html
@@ -499,9 +499,8 @@
         <div class="ui attached segment">
             <div class="ui center aligned grid">
                 <div class="eight wide column">
-                    <button class="ui mini primary button" routerLink="/int01/1/2">
-                        <i class="arrow left icon"></i>
-                        ย้อนหลับ
+                    <button class="ui mini button" routerLink="/int01/1/2">
+                        กลับ
                     </button>
                 </div>
             </div>
