--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-7/int01-7-1/int01-7-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-7/int01-7-1/int01-7-1.component.html
@@ -1,95 +1,103 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ตรวจสอบการพิมพ์ใบอนุญาตซ้ำ</h2>
 
     <div class="ui top attached header">
-      <span>การพิมพ์ใบอนุญาตซ้ำ</span>
+      <span><h3>ตรวจสอบสถิติการพิมพ์ใบอนุญาตซ้ำ</h3></span>
     </div>
 
     <div class="ui attached segment">
       <div class="ui form">
+
         <div class="inline fields">
-          <div class="four wide field"></div>
-          <div class="eight wide field">
-            <label class="custom-label-w-25">สำนักงานสรรพสามิตภาค</label>
-            <select name="selectZone" id="selectZone" class="ui dropdown ai">
-              <option *ngFor="let item of zoneList; index as i;" value="{{i+1}}">{{item.value}}</option>
+          <div class="three wide field"></div>
+          <div class="two wide field">
+            <label>สำนักงานสรรพสามิตภาค</label>
+          </div>
+          <div class="seven wide field">
+            <select class="ui dropdown search selection" style="width: 100%;" id="travelTo1" (change)="travelTo2Dropdown($event)">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of travelTo1List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
+            </select>
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="three wide field"></div>
+          <div class="two wide field">
+            <label>สำนักงานสรรพสามิตพื้นที่</label>
+          </div>
+          <div class="seven wide field">
+            <select class="ui dropdown search selection" style="width: 100%;" id="travelTo2" (change)="travelTo3Dropdown($event)">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of travelTo2List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
+            </select>
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="three wide field"></div>
+          <div class="two wide field">
+            <label>สำนักงานสรพพสามิตสาขา</label>
+          </div>
+          <div class="seven wide field">
+            <select class="ui dropdown search selection" style="width: 100%;" id="travelTo3" (change)="setTravelTo($event)">
+              <option value="">เลือก</option>
+              <option *ngFor="let data of travelTo3List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
             </select>
           </div>
         </div>
 
         <div class="inline fields">
-          <div class="four wide field"></div>
-          <div class="eight wide field">
-            <label class="custom-label-w-25">สำนักงานสรรพสามิตพื้นที่</label>
-            <select name="selectArea" id="selectArea" class="ui dropdown ai">
-              <option *ngFor="let item of areaList; index as i;" value="{{i+1}}">{{item.value}}</option>
-            </select>
+          <div class="three wide field"></div>
+          <div class="two wide required field">
+            <label>ระยะเวลาที่ตรวจสอบ</label>
           </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="four wide field"></div>
-          <div class="eight wide field">
-            <label class="custom-label-w-25">สำนักงานสรรพสามิตพื้นที่สาขา</label>
-            <select name="selectSubArea" id="selectSubArea" class="ui dropdown ai">
-              <option *ngFor="let item of subAreaList; index as i;" value="{{i+1}}">{{item.value}}</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="four wide field"></div>
-          <div class="two wide field ">
-            <label class="custom-label-w-35">วันที่
-            </label>
-          </div>
-          <div class="three wide field">
-            <div class="ui calendar" id="calendar1" style="width:100%">
-              <div class="ui input left icon">
-                <i class="time icon"></i>
-                <input type="text" name="endDate" id="endDate">
-              </div>
+          <div class="three wide field ui calendar" id="date1">
+            <div class="ui input left icon">
+              <i class="time icon"></i>
+              <input type="calendar" readonly="" id="dateIn1" [attr.required]="true" autocomplete="off">
             </div>
           </div>
-          <label>ถึง</label>
-          <div class="three wide field">
-            <div class="ui calendar" id="calendar2" style="width:100%">
-              <div class="ui input left icon">
-                <i class="time icon"></i>
-                <input type="text" name="endDate" id="endDate">
-              </div>
+
+          <div class="one wide field">
+            <label>ถึง</label>
+          </div>
+          <div class="three wide field ui calendar" id="date2">
+            <div class="ui input left icon">
+              <i class="time icon"></i>
+              <input type="calendar" readonly="" id="dateIn2" [attr.required]="true" autocomplete="off">
             </div>
           </div>
         </div>
       </div>
-
+      <br>
       <div class="ui center aligned grid">
         <div class="eight wide column">
-          <button class="ui mini primary button width-100" (click)="searchData()">
-            <i class="search icon"></i>
-            ค้นหา
-          </button>
-          <button class="ui mini button width-100" (click)="clearData()">
-            <i class="refresh icon"></i>
-            ล้างข้อมูล
-          </button>
+          <button class="ui primary button" (click)="chicksearch()">ค้นหา</button>
+          <button class="ui button " (click)="clickClear()">ล้างข้อมูล</button>
         </div>
       </div>
+      <br>
     </div>
 
-    <div class="ui segment">
-      <table id="table1" class="ui small celled table">
+    <div class="ui {{ loading? 'loading' : '' }} segment">
+      <table id="table" class="ui small celled table nowrap " style="width: 100%">
         <thead>
-          <tr style="text-align: center;">
-            <th>ประเภทใบอนุญาต</th>
-            <th>แบบพิมพ์สรรพสามิต</th>
-            <th>เลขแบบพิมพ์</th>
-            <th>เลขใบอนุญาต</th>
-            <th>จำนวนครั้งที่พิมพ์ซ้ำ</th>
+          <tr>
+            <th style="text-align: center !important;">ผู้ประกอบการ</th>
+            <th style="text-align: center !important;">ประเภทใบอนุญาต</th>
+            <th style="text-align: center !important;">แบบพิมพ์สรรพสามิต</th>
+            <th style="text-align: center !important;">เลขใบอนุญาต</th>
+            <th style="text-align: center !important;">จำนวนครั้งที่พิมพ์ซ้ำ</th>
           </tr>
         </thead>
       </table>
+      <br>
+      <div class="ui center aligned grid">
+        <div class="sixteen wide column">
+          <button type="button" class="ui button orange">ส่งออก</button>
+        </div>
+      </div>
+      <br>
     </div>
+
   </div>
 </div>
