--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -54,8 +54,8 @@
                         routerLinkActive="active " style=" color:White ">ตรวจสอบใบอนุญาต</a>
                     <a class="item " [routerLink]="[ '/int01/3/1'] " *ngIf="authService.renderByPage('int01/3/1')"
                         routerLinkActive="active " style=" color:White ">ตรวจสอบใบเสร็จค่าปรับเปรียบเทียบคดี</a>
-                    <a class="item " [routerLink]="[ '/???'] " *ngIf="authService.renderByPage('????')"
-                        routerLinkActive="active " style=" color:White ">ตรวจสอบการนำฝาก/ส่งเงินรายได้</a>
+                    <a class="item " [routerLink]="[ '/???'] " *ngIf="authService.renderByPage('???')" routerLinkActive="active "
+                        style=" color:White ">ตรวจสอบการนำฝาก/ส่งเงินรายได้</a>
                     <a class="item " [routerLink]="[ '/int01/4/1'] " *ngIf="authService.renderByPage('int01/4/1')"
                         routerLinkActive="active " style=" color:White ">ตรวจสอบงบสรุปยอดเงินค่าภาษีกับงบทดลอง</a>
                     <a class="item " [routerLink]="[ '/int01/5/1'] " *ngIf="authService.renderByPage('int01/5/1')"
@@ -64,8 +64,8 @@
                         routerLinkActive="active " style=" color:White ">ตรวจสอบสถติการต่ออายุใบอนุญาตของผู้ประกอบการ</a>
                     <a class="item " [routerLink]="[ '/int01/7/1'] " *ngIf="authService.renderByPage('int01/7/1')"
                         routerLinkActive="active " style=" color:White ">ตรวจสอบการพิมพ์ใบอนุญาตซ้ำ</a>
-                    <a class="item " [routerLink]="[ '/????'] " *ngIf="authService.renderByPage('???')"
-                        routerLinkActive="active " style=" color:White ">รายงานตัดปีงบประมาณเงินผลประโยชน์ </a>
+                    <a class="item " [routerLink]="[ '/???'] " *ngIf="authService.renderByPage('???')" routerLinkActive="active "
+                        style=" color:White ">รายงานตัดปีงบประมาณเงินผลประโยชน์ </a>
                 </div>
             </div>
             <div class="ui simple dropdown item " *ngIf="authService.renderByPage('int05')">
